<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.sentimo.LoginActivity"
    android:background="@drawable/image01"
    android:orientation="vertical">
    <LinearLayout
        android:paddingTop="70dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/TextViewLoginScreen"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:fontFamily="serif"
            android:gravity="center_horizontal"
            android:text="Sentimo Login"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#E95384"
            android:textSize="70dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:fontFamily="cursive"
            android:gravity="top|center_horizontal"
            android:text="Celebrate your Sentiments with Sentimo"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#1A1A1B"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/Username_LS_editText"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:background="@drawable/logintextstyle"
            android:backgroundTint="#819C27B0"
            android:fontFamily="casual"
            android:layout_marginTop="10dp"
            android:gravity="left"
            android:hint="UserName"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#fff"
            android:textColorHint="#fff"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/Password_LS_editText"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/logintextstyle"
            android:backgroundTint="#859C27B0"
            android:fontFamily="casual"
            android:gravity="left"
            android:hint="Password"
            android:layout_marginBottom="10dp"
            android:inputType="textPassword"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#fff"
            android:textColorHint="#fff"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button_login"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/buttonstyleselector"
            android:fontFamily="casual"
            android:text="Login"
            android:layout_marginBottom="10dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#fff"
            android:textStyle="bold" />

        <Button
            android:id="@+id/reset_email_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#fff"
            android:textStyle="bold"
            android:background="@drawable/buttonstyleselector"
            android:text="Forgot password?" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:fontFamily="cursive"
            android:gravity="center_horizontal"
            android:text="Join the Sentimo family"
            android:layout_marginTop="10dp"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#FFFFFD"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button_sign_upLoginScreen"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/buttonstyleselector"
            android:fontFamily="casual"
            android:text="Sign-Up"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#fff"
            android:textStyle="bold" />



    </LinearLayout>
</LinearLayout>

