...
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="#8BC34A"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/filter_happy_button"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:textAlignment="center"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="25dp"
...
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="#F8E207"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/filter_confident_button"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:textAlignment="center"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="22dp"
...
            android:gravity="bottom|center_horizontal|top"
            android:text="View All:   "
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textStyle="bold"></TextView>

        <Button
            android:id="@+id/filter_all_button"
            android:layout_width="135dp"
            android:layout_height="match_parent"
            android:layout_marginTop="25dp"
            android:fontFamily="casual"
            android:text="ALL"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
...
